aggiunto il footer e aggiornato le immagini

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@
         width: 60%;
     }
 
+    footer{
+        margin-top: 2%;
+        margin-bottom: 5%;
+        text-align: center;
+    }
+
     /* stop Common */
 
     /* Header */
