aggiornato main con ultimi tag e footer

--- a/css/style.css
+++ b/css/style.css
@@ -84,4 +84,10 @@
         display: inline-block;
     }
 
+
+/*     #discovery{
+        background-image: none;
+        display: inline-block;       
+    } */
+
     /* stop Main */
